docs/api/qiskit/0.19/qiskit.providers.models.BackendConfiguration.md
---
title: BackendConfiguration
description: API reference for qiskit.providers.models.BackendConfiguration
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.BackendConfiguration
---

# BackendConfiguration

<span id="qiskit.providers.models.BackendConfiguration" />

`BackendConfiguration(backend_name, backend_version, n_qubits, basis_gates, gates, local, simulator, conditional, open_pulse, memory, max_shots, coupling_map, max_experiments=None, sample_name=None, n_registers=None, register_map=None, configurable=None, credits_required=None, online_date=None, display_name=None, description=None, tags=None, **kwargs)`

Backwards compat shim representing an abstract backend configuration.

Initialize a QasmBackendConfiguration Object

**Parameters**

*   **backend\_name** (*str*) – The backend name
*   **backend\_version** (*str*) – The backend version in the form X.Y.Z
*   **n\_qubits** (*int*) – the number of qubits for the backend
*   **basis\_gates** (*list*) – The list of strings for the basis gates of the backends
*   **gates** (*list*) – The list of GateConfig objects for the basis gates of the backend
*   **local** (*bool*) – True if the backend is local or False if remote
*   **simulator** (*bool*) – True if the backend is a simulator
*   **conditional** (*bool*) – True if the backend supports conditional operations
*   **open\_pulse** (*bool*) – True if the backend supports OpenPulse
*   **memory** (*bool*) – True if the backend supports memory
*   **max\_shots** (*int*) – The maximum number of shots allowed on the backend
*   **coupling\_map** (*list*) – The coupling map for the device
*   **max\_experiments** (*int*) – The maximum number of experiments per job
*   **sample\_name** (*str*) – Sample name for the backend
*   **n\_registers** (*int*) – Number of register slots available for feedback (if conditional is True)
*   **register\_map** (*list*) – An array of dimension n\_qubits X n\_registers that specifies whether a qubit can store a measurement in a certain register slot.
*   **configurable** (*bool*) – True if the backend is configurable, if the backend is a simulator
*   **credits\_required** (*bool*) – True if backend requires credits to run a job.
*   **online\_date** (*datetime*) – The date that the device went online
*   **display\_name** (*str*) – Alternate name field for the backend
*   **description** (*str*) – A description for the backend
*   **tags** (*list*) – A list of string tags to describe the backend
*   **\*\*kwargs** – optional fields

## Attributes

|                                                                                                                                                        |                               |
| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------- |
| [`BackendConfiguration.num_qubits`](qiskit.providers.models.BackendConfiguration.num_qubits "qiskit.providers.models.BackendConfiguration.num_qubits") | Returns the number of qubits. |

## Methods

|                                                                                                                                                           |                                                              |
| --------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------ |
| [`BackendConfiguration.from_dict`](qiskit.providers.models.BackendConfiguration.from_dict "qiskit.providers.models.BackendConfiguration.from_dict")(data) | Create a new GateConfig object from a dictionary.            |
| [`BackendConfiguration.to_dict`](qiskit.providers.models.BackendConfiguration.to_dict "qiskit.providers.models.BackendConfiguration.to_dict")()           | Return a dictionary format representation of the GateConfig. |

